--- a/patte-et-cie/tsconfig.json
+++ b/patte-et-cie/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "**/*.mts",
+    "src/.configs/roleRedirectConfig.ts"
   ],
   "exclude": ["node_modules"]
 }
